...
    <string name="foodType">category</string>
    <string name="gramSugar"> sugar per piece</string>
    <string name="quantitySugar">consumed quantity</string>
    <string name="gramPerHundredLabel">sugar per 100g</string>
    <string name="amountSugar">consumed amount</string>
    <string name="totalAmountSugar">total</string>
    <string name="saveButton">Save</string>
    <string name="timestampToday">Today</string>
    <string name="timestampYesterday">Yesterday</string>
    <string name="counterTitle">Counter</string>
    <string name="historyTitle">History</string>
    <string name="categoryPlural">Categories</string>
    <string name="settingsTitle">Settings</string>
    <string name="categoryMaxInput">Maximum length: 40 characters</string>
    <string name="categoryInputOnlyDescription">Only a food category without a corresponding sugar entry was added, as no complete information was entered for this.</string>
    <string name="deleteCategroyAlertDescription">Do you really want to delete the following category name?</string>
    <string name="generalConfirm">Confirm</string>
    <string name="generalCancel">Cancel</string>
...
    <string name="historyNoDataInfoDescription">No entries yet</string>
    <string name="settings_third_party_licenses_text">Third-party licenses</string>
    <string name="entryDateTitle">Day selection</string>
    <string name="entryDateDescription">Selectable today up to 30 days in the past</string>
    <string name="tabCounterPerHundred">sugar/100g</string>
    <string name="tabCounterPerPiece">sugar/piece</string>
    <string name="gram_unit_short">g</string>
    <string name="settings_button_faq_text">FAQ</string>
    <string name="settings_title_faq_text">Frequently Asked Questions</string>
    <string name="faq_question_one">What is this app for?</string>
    <string name="faq_answer_one">To monitor daily sugar intake by scanning food items or manually entering sugar values.</string>
    <string name="faq_question_two">Can the app be used free of charge?</string>
    <string name="faq_answer_two">Yes, the app is completely free and no advertising is displayed.</string>
...
    <string name="landscape_mode_no_graph_description">This page is unfortunately not available in the landscape mode. Please change to the vertical format to view this page.</string>
    <string name="accessibility_tabCounterPerHundred">Enter sugar per one hundred gram here</string>
    <string name="accessibility_tabCounterPerPiece">Enter sugar per piece here</string>
    <string name="accessibility_date_picker_button">Choose the date of your entry</string>
    <string name="accessibility_scan_barcode_button">Retrieve the details of a product category by scanning its barcode</string>
    <string name="accessibility_delete_value">Delete value</string>
    <string name="accessibility_perHundredGram_textField">Enter a value in grams under one hundred here</string>
    <string name="accessibility_perHundredGram_textField_consumed">Enter the amount eaten here</string>
    <string name="accessibility_category_input_field">Enter a food category here or select one from the list</string>
    <string name="accessibility_category_arrow_list">Open list</string>
    <string name="accessibility_perPiece_textField">Enter a value in grams for one piece</string>
    <string name="accessibility_perPiece_textField_consumed">Enter the number eaten here</string>
    <string name="accessibility_search">Search</string>
    <string name="accessibility_categories_srolling">Scroll to a specific letter</string>
    <string name="accessibility_delete_categories">Delete selected categories</string>
...
